--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 <script>
-	var socket = io.connect('http://high-meadow-3467.herokuapp.com/');
+	var socket = io.connect('http://node-chat-test.herokuapp.com/');
 
 	// on connection to server, ask for user's name with an anonymous callback
 	socket.on('connect', function(){
